--- a/src/index.css
+++ b/src/index.css
@@ -77,3 +77,39 @@ ul.header li a {
 	position:relative;
 	top:1px;
 }
+.todolist {
+	display: flex;
+	flex-direction: column;
+	padding: 1.5em 0;
+}
+
+.todoitem {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 1.5em;
+	background: #ffffff;
+	margin-bottom: 1.5em;
+	box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.2);
+}
+.todoitem.done {
+	background-color: #F8F8F8;
+}
+
+.todoitem__title {
+	color: #171717;
+	font-size: 1.8em;
+}
+.todoitem.done .todoitem__title {
+	color: #AAA;
+	text-decoration: line-through;
+}
+
+.todoitem__remove {
+	color: #AF1E2D;
+	text-decoration: underline;
+	font-size: 1.6em;
+	cursor: pointer;
+}
